syntax = "proto3";

package database;

option java_multiple_files = true;

message SchemaOptions {
  string database_name = 1;
}

message SchemaBundle {
  Schema schema = 1;
  SchemaBundleMetadata metadata = 2;
}

message SchemaBundleMetadata {
  repeated ProtoMetadata proto_metadata = 2;
}

message ProtoMetadata {
  string proto_import = 1;
  repeated ProtoField proto_field = 2;
}

message ProtoField {
  string field_name = 1;
  string type = 2;
}

message Schema {
  repeated string proto_import = 1;
  string name = 2;
  repeated Table table = 3;
}

message Table {
  string name = 1;
  repeated Column column = 2;
  repeated PrimaryKey primary_key = 3;
}

message Column {
  // TODO: add max_size and default_value fields?
  string name = 1;
  string type = 2;
}

message PrimaryKey {
  string column_name = 1;
  string field_name = 2;
}
// TODO: add messages Index, ForeignKey